fixing some bugs with the collapse bar and links

--- a/src/index.css
+++ b/src/index.css
@@ -78,6 +78,7 @@ html {
   text-decoration: none;
   color: white;
   cursor: pointer;
+  z-index:1;
 }
 
 .nav-link:hover {
